<resources>
    <string name="app_name">Eve Ant</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_confirmPassword">Confirm password</string>
    <string name="prompt_newPassword">New password</string>
    <string name="edit">Edit</string>

    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="activation_link">We have sent you the activation link. Check your emails to continue.</string>

    <string name="prompt_country">Country</string>

    <string name="prompt_city">City</string>

    <string name="prompt_street">Street</string>
    <string name="prompt_house">House number</string>

    <string name="prompt_postal_number">Postal number</string>

    <string name="prompt_phoneNumber">Phone number</string>
    <string name="prompt_organizer">Organizer</string>
    <string name="prompt_provider">Provider</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="are_you">Are you...</string>

    <string name="here_to_plan">...here to plan the party... </string>

    <string name="or_bring_the">...or bring the goods? </string>

    <string name="where_can_we_reach_you">Where can we reach you?</string>

    <string name="where_can_we_reach_your">Where can we find your company?</string>

    <string name="dont_have_an_account">Don\'t have an account?</string>

    <string name="hello_provider">Hello, Provider!</string>

    <string name="tell_us_more">Tell us more about yourself:</string>

    <string name="tell_us_more_company">Tell us more about your company:</string>

    <string name="create_your_account">Create your account:</string>

    <string name="description">Description kjsbfdsa d kdsnajfd vids jfds ds fdi foidsoifdofdshfdsof dfhd fdf do foidhfd hfod hof hdof</string>

    <string name="add_photos">Add photos</string>

    <string name="continue_to_home">Continue to home page</string>

    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="h">h</string>
    <string name="min">min</string>
    <string name="action_next">Next</string>

    <string name="action_back">Back</string>
    <string name="action_finish">Finish</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_visible">Visible</string>
    <string name="prompt_hidden">Hidden</string>
    <string name="prompt_available">Available</string>
    <string name="prompt_unavailable">Unavailable</string>
    <string name="save">Save</string>
    <string name="prompt_manual">Manual</string>
    <string name="prompt_automatic">Automatic</string>
    <string name="prompt_price">Set price</string>
    <string name="prompt_description">Description </string>
    <string name="next">Next</string>
    <string name="prompt_discount">Discount</string>
    <string name="photos">Upload photos +</string>
    <string name="conformation"> Reservation confirmation? </string>
    <string name="prompt_cancellation_period">Cancellation period</string>
    <string name="prompt_reservation_deadline">Reservation deadline</string>
    <string name="myServices">My services</string>
    <string name="realPrice">20e</string>
    <string name="search_service_string">Search your services...</string>
    <string name="prompt_specifications">Specifications</string>
    <string name="reservation_type">How do you want the reservation confirmation?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="events_near"> Events near </string>
    <string name="place">
        Novi Sad, Serbia
    </string>
    <string name="search_string">
        Search...
    </string>
    <string name="popular_services">
            Popular services
    </string>
    <string name="dragi_bravo">
            Dragi Bravo maskenbal
    </string>
    <string name="novosadski_sajam">
                Novosadski sajam
    </string>
    <string name="time_of_event">
                21:00
    </string>
    <string name="date_of_event">
                    26\nOCT
    </string>
    <string name="popular_products">
            Popular products
    </string>
    <string name="photographText">
                Photograph
    </string>
    <string name="decorationText">
                Decoration
    </string>
    <string name="search">Search...</string>flowerText
    <string name="flowerText">
                Flowers
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_filters">Apply filters</string>
    <string name="search_category">Search category</string>
    <string name="event_type">Choose event types</string>
    <string name="price">Price</string>
    <string name="only_available">Show only available services</string>
    <string name="chose_category">Choose categories</string>
    <string name="max_price">10000 €</string>
    <string name="min_price">0 €</string>
    <string name="add_service">Add new service</string>
    <string name="edit_service">Edit service</string>
    <string name="category">Category</string>
    <string name="create_service">Create service</string>
    <string name="select_type_of_events">Select type of events</string>
    <string name="duration">Duration</string>
    <string name="select_category">Select category</string>
    <string name="hint_new_category">Suggest new category</string>
    <string name="check_new_category">Check new category</string>
    <string name="description_service">This is a detailed description of the service, providing relevant information for the user.This is a detailed description of the service, providing relevant information for the user.This is a detailed description of the service, providing relevant information for the user.</string>
    <string name="specification_service">Key specifications of the service go here, listed clearly to inform the user.</string>
    <string name="view_comments_and_reviews">View Comments and Reviews</string>
    <string name="comments_and_reviews">Comments and Reviews</string>
    <string name="adminName">Admin</string>
    <string name="category_name">Category Name</string>
    <string name="suggested">Suggested</string>

    <string-array name="categories">
        <item>Select category</item>
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
        <item>Category 4</item>
    </string-array>
    <string-array name="event_types">
        <item>Event Type 1</item>
        <item>Event Type 2</item>
        <item>Event Type 3</item>
        <item>Event Type 4</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_graphs">GraphsActivity</string>
</resources>