<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_corners_white"
    android:padding="16dp"
    tools:context=".PersonalInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/create_your_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/person_vector"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/username"
                style="@style/loginInputText"
                android:hint="@string/prompt_username"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lock"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/password"
                style="@style/loginInputText"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/lock"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/confirmPassword"
                style="@style/loginInputText"
                android:hint="@string/prompt_confirmPassword"
                android:inputType="textPassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/goToYourself"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners_8599e0"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/action_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/goToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners_e8e8e8"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/action_login"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:backgroundTint="@null"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</FrameLayout>
