<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_corners_white"
    android:padding="16dp"
    tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/where_can_we_reach_your"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/location"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/country"
                style="@style/loginInputText"
                android:hint="@string/prompt_country"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/location"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/city"
                style="@style/loginInputText"
                android:hint="@string/prompt_city"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/location"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/street"
                style="@style/loginInputText"
                android:hint="@string/prompt_street"
                android:inputType="text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/location"
                android:layout_marginStart="16dp"
                android:layout_gravity="start|center_vertical"/>
            <EditText
                android:id="@+id/postalNumber"
                style="@style/loginInputText"
                android:hint="@string/prompt_postal_number"
                android:inputType="text"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_photos"
            android:textColor="@color/black"
            android:drawableStart="@drawable/photo_plus"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_corners_f0f3ff"
            android:orientation="horizontal"/>
        <Button
            android:id="@+id/goToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners_8599e0"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/action_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"/>
        <Button
            android:id="@+id/goToCompany1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners_e8e8e8"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/action_back"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:backgroundTint="@null"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="16dp"/>
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </LinearLayout>
</FrameLayout>