<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <LinearLayout
        android:id="@+id/fragment_container_layout"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corners_white"
        android:clipToPadding="false"
        android:elevation="8dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/edit_service"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <EditText
                android:id="@+id/description"
                style="@style/loginInputText"
                android:hint="@string/prompt_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="5"
                android:gravity="top"
                android:scrollbars="vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners_f0f3ff">
            <EditText
                android:id="@+id/specifications"
                style="@style/loginInputText"
                android:hint="@string/prompt_specifications"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="5"
                android:gravity="top"
                android:scrollbars="vertical"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_photos"
            android:textColor="@color/black"
            android:drawableStart="@drawable/photo_plus"
            android:paddingStart="10dp"
            android:background="@drawable/rounded_corners_f0f3ff"
            android:orientation="horizontal"/>

        <!-- Dugmad za navigaciju -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="207dp">

            <Button
                android:id="@+id/previous_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_back"
                android:background="@drawable/rounded_corners_e8e8e8"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_next"
                android:background="@drawable/rounded_corners_8599e0"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>
        <!-- Page broj -->
        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="2"
            android:layout_marginTop="10dp"
            android:textSize="12sp"/>

    </LinearLayout>


</FrameLayout>
